Updated Bookshelf.css to personalize both BookshelfView corresponding to the Personal and opponents bookshelf Updated BookshelfView.java that now is an abstract class that represents both Personal and Opponent bookshelf that are created separately in OpponentBookshelfView.java and PersonalBookshelfView.java Added BookshelfViewType.java to distinguish between Personal and Opponent bookshelf Added PointPane graphical component to shows obtained points and chair inside an ad hoc grpahical component: PointCell. The PointPane can be showed in two version contained in SquarePointPane.java and HPointPane.java. Modified game-interface.fxml, GameInterface.css, GameInterfaceController.java, personal-bookshelf.fxml, PersonalBookshelfController.java to use new graphical components added. Updated module-info.java to use new graphical component added. Added new decoration "MyShelfieInnerLighting" Major updates to opponents-interface.fxml, OpponentsInterfaceController.java that now appear completely different and is stylized with a new OpponentsInterface.css Renamed opponent-bookshelf.fxml to single-opponent-bookshelf.fxml and OpponentBookShelfController.java to SingleOpponentBookShelfController.java to distinguish easily the complete opponents view and the single opponent view. Added a SingleOpponentsInterface.css to stylish the single-opponent-bookshelf.fxml layout better.

--- a/src/main/resources/it.polimi.ingsw/gui/layout/bookshelf/Bookshelf.css
+++ b/src/main/resources/it.polimi.ingsw/gui/layout/bookshelf/Bookshelf.css
@@ -3,11 +3,23 @@
     -fx-hgap: 0.6em;
 }
 
+#bookshelfOpponentGrid {
+    -fx-padding: 1.5em 2.7em 2.85em 2.77em;
+    -fx-hgap: 0.6em;
+}
+
 #bookshelfImagePane {
     -fx-background-image: url('../../../graphical.resources/boards/bookshelf.png');
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;
-    -fx-padding: 17em 17em 17em 17em;
+    -fx-padding: 17em;
+}
+
+#bookshelfOpponentImagePane {
+    -fx-background-image: url('../../../graphical.resources/boards/bookshelf.png');
+    -fx-background-size: cover;
+    -fx-background-repeat: no-repeat;
+    -fx-padding: 12.75em;
 }
 
 .filled_bookshelf_cell {
@@ -17,5 +29,10 @@
 
 .empty_bookshelf_cell {
     -fx-padding: 2em;
+    -fx-background-color: transparent;
+}
+
+.opponent_empty_bookshelf_cell {
+    -fx-padding: 1.5em;
     -fx-background-color: transparent;
 }
