--- a/src/main/resources/it.polimi.ingsw/gui/layout/bookshelf/single-opponent-bookshelf.fxml
+++ b/src/main/resources/it.polimi.ingsw/gui/layout/bookshelf/single-opponent-bookshelf.fxml
@@ -6,24 +6,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import it.polimi.ingsw.view.gui.customcomponents.BookshelfView?>
-<?import javafx.scene.shape.Rectangle?>
-<GridPane fx:id="opponentBookshelfRootPane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="it.polimi.ingsw.view.gui.layout.bookshelf.OpponentBookShelfController">
+<?import it.polimi.ingsw.view.gui.customcomponents.pointpane.SquarePointPane?>
+
+<?import it.polimi.ingsw.view.gui.customcomponents.bookshelf.OpponentBookshelfView?>
+<VBox fx:id="singleOpponentRootPane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="it.polimi.ingsw.view.gui.layout.bookshelf.SingleOpponentBookShelfController"
+      stylesheets="@SingleOpponentsInterface.css" alignment="CENTER" styleClass="single_opponent_root_pane">
     <fx:define>
-        <Double fx:id="bookshelfCommandMaxDim" fx:value="100"/>
+        <Double fx:id="bookshelfCommandMaxDim" fx:value="100.0"/>
     </fx:define>
 
-    <rowConstraints>
-        <RowConstraints percentHeight="10" valignment="CENTER" fillHeight="false" vgrow="NEVER"/>
-        <RowConstraints percentHeight="80" valignment="CENTER" fillHeight="false" vgrow="NEVER"/>
-        <RowConstraints percentHeight="10" valignment="CENTER" fillHeight="false" vgrow="NEVER"/>
-    </rowConstraints>
-    <columnConstraints>
-        <ColumnConstraints percentWidth="$bookshelfCommandMaxDim" halignment="CENTER" hgrow="NEVER"/>
-    </columnConstraints>
+    <Label fx:id="opponentBookshelfName" mouseTransparent="true"/>
 
-    <GridPane GridPane.columnIndex="0" GridPane.rowIndex="0" style="-fx-padding: 0em 3.6em 0em 3.7em; -fx-hgap: 0.6em;">
+    <GridPane fx:id="transparentGridPaneContainer" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <rowConstraints>
             <RowConstraints percentHeight="100" valignment="CENTER" vgrow="NEVER"/>
         </rowConstraints>
@@ -42,8 +37,7 @@
         <StackPane fx:id="rightPane" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
     </GridPane>
 
-    <BookshelfView fx:id="opponentBookshelfView" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+    <OpponentBookshelfView fx:id="opponentBookshelfView"/>
 
-    <Label fx:id="opponentBookshelfName" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.fillWidth="true"
-           labelFor="$opponentBookshelfRootPane" mouseTransparent="true"/>
-</GridPane>
+    <SquarePointPane/>
+</VBox>
