Added EndGameToken.java in BoardView Modified BoardView.css according to new EndGameToken Fixed bug in BoardViewController and added a method to move tokenViews Minor changes to BookshelfController, BookshelfView, ConnectionPageController, LoginPageController, MyshelfieButton, MyshelfieColor, MyshelfieTriangleButton, StateTest.java, TileBoxChildManager, TileViewInBoard, TileViewInBox. Changed CommonGoalDeserializer package and improvements in implementation Added a new version CommonGoalView Added a new graphical component EndGameTokenView Modified GameInterface, GameInterfaceController with new components, animation managment of TileSubjectView according to new personalized animation classes. Added move functionality to TileSubject and TokenView in MainInterfaceController Moved MyshelfieAlertCreator from CustomComponents to GuiToolKit Defined default method to MyshelfieComponent Improvment and bug adjustments in MyShelfieGraphicIcon Added movement a updatating functionality in OppononentBookshelfView Added opponent operation managment in OpponentInterfaceController Fixed a bug in Pattern_10.Json and in PointCell Renamed Personal Goal Image files Added Highlight functionality of Personal goal for Bookshelf Added managment operation of player's bookshelf in PersonalBookshelfView Added a class for PersonalView Added functionality to take the first available point cell in PointPane Added scoringTokenView.java to visualize scoring token Implemented neccesary operation to insert tiles in single opponent bookshelf controller

--- a/src/main/resources/it.polimi.ingsw/gui/layout/board/BoardView.css
+++ b/src/main/resources/it.polimi.ingsw/gui/layout/board/BoardView.css
@@ -8,14 +8,22 @@
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
     -fx-background-size: cover;
-    -fx-padding: 1.9em 2em 1.9em 1.7em;
+    -fx-padding: 2.75em 2.9em 2.75em 2.46em;
 }
 
 #livingRoomGridPane {
-    -fx-hgap: 0.2em;
-    -fx-vgap: 0.2em;
+    -fx-hgap: 0.29em;
+    -fx-vgap: 0.29em;
 }
 
 .item_tile_board_box {
     -fx-padding: 2.9em;
+}
+
+#boardEndGameBoxContainer {
+    -fx-padding: 41.65em 5.2em 11.9em 49.1em;
+}
+
+#endGameBox {
+    -fx-padding: 0.1em;
 }
