Moving tiles functionality for opponents and scoring points to opponents. And minor changes.

--- a/src/main/resources/it.polimi.ingsw/gui/layout/bookshelf/single-opponent-bookshelf.fxml
+++ b/src/main/resources/it.polimi.ingsw/gui/layout/bookshelf/single-opponent-bookshelf.fxml
@@ -39,5 +39,5 @@
 
     <OpponentBookshelfView fx:id="opponentBookshelfView"/>
 
-    <SquarePointPane/>
+    <SquarePointPane fx:id="singleOpponentPointPane"/>
 </VBox>
