--- a/src/main/resources/it.polimi.ingsw/gui/layout/chat/chat-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/gui/layout/chat/chat-page.fxml
@@ -1,69 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.GridPane?>
 
+<?import javafx.scene.layout.VBox?>
+
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
-<?import javafx.geometry.Insets?>
-<?import it.polimi.ingsw.view.gui.customcomponents.messageView.SingleMessageView?>
-<!--
-<GridPane fx:id="chatPageRootPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-          prefHeight="200.0"
-          prefWidth="200.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="it.polimi.ingsw.view.gui.layout.chatpage.ChatPageController" stylesheets="@ChatPage.css"
-          vgap="10.0">
+<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.shape.Rectangle?>
+<AnchorPane fx:id="chatPageRootPane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+            fx:controller="it.polimi.ingsw.view.gui.layout.chatpage.ChatPageController" stylesheets="@ChatPage.css">
 
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" percentWidth="25.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" percentWidth="50.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" percentWidth="25.0"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-    </rowConstraints>
-    <children>
-        <SingleMessageView senderName="Ema"
-                           message=" Ema e' stato bravissimo."
-                           GridPane.columnSpan="2" GridPane.columnIndex="1" GridPane.rowIndex="0">
+    <shape>
+        <Rectangle width="${chatPageRootPane.width}" height="${chatPageRootPane.height}" arcHeight="10" arcWidth="10"/>
+    </shape>
 
-        </SingleMessageView>
-        <VBox maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="0.0" GridPane.columnSpan="2"
-              GridPane.rowIndex="1">
-            <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="You"/>
-                <TextFlow style="-fx-background-color: lightgray; -fx-background-radius: 10;" textAlignment="JUSTIFY">
-                    <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Receiver"/>
-                    </children>
-                    <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </opaqueInsets>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </padding>
-                </TextFlow>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Here is time"/>
-            </children>
-            <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </padding>
-        </VBox>
-    </children>
-    <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-    </padding>
+    <GridPane fx:id="chatPageBoxDisplacer" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+            <ColumnConstraints percentWidth="100"/>
+        </columnConstraints>
 
+        <rowConstraints>
+            <RowConstraints percentHeight="70"/>
+            <RowConstraints percentHeight="30"/>
+        </rowConstraints>
 
-</GridPane>-->
-<VBox fx:id="chatPageRootPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-      prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="it.polimi.ingsw.view.gui.layout.chatpage.ChatPageController" stylesheets="@ChatPage.css">
-    <SingleMessageView senderName="Ema" message=" Ema e' stato bravissimo."
-                       GridPane.columnSpan="2" GridPane.columnIndex="1" GridPane.rowIndex="0" alignment="CENTER_RIGHT"/>
-    <SingleMessageView senderName="Adem" message=" Adem e' stato bravissimo."
-                       GridPane.columnSpan="2" GridPane.columnIndex="1" GridPane.rowIndex="0" alignment="CENTER_LEFT"/>
-</VBox>
+        <ScrollPane fx:id="scrollingChatPane" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.fillWidth="true"
+                    GridPane.fillHeight="true" vbarPolicy="NEVER" hbarPolicy="NEVER"/>
+
+        <TextArea fx:id="inputMessage" GridPane.columnIndex="0" GridPane.rowIndex="1" onKeyPressed="#sendMessage"/>
+    </GridPane>
+</AnchorPane>
