--- a/src/main/resources/it.polimi.ingsw/gui/layout/maininterface/main-interface.fxml
+++ b/src/main/resources/it.polimi.ingsw/gui/layout/maininterface/main-interface.fxml
@@ -15,7 +15,8 @@
                 AnchorPane.topAnchor="0.0" fitToWidth="true">
         <VBox fx:id="scrollContentBox" alignment="CENTER">
             <fx:include fx:id="gameInterface" source="../gameinterface/game-interface.fxml"/>
-            <fx:include fx:id="opponentsInterface" source="../opponentsinterface/opponents-interface.fxml"/>
+            <fx:include fx:id="opponentsInterface" source="../opponentsinterface/opponents-interface.fxml"
+                        VBox.vgrow="NEVER" />
         </VBox>
     </ScrollPane>
 
